[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/problem_solver/problem_solver.gd" type="Script" id=1]
[ext_resource path="res://assets/gear/ui/GUI.png" type="Texture" id=2]
[ext_resource path="res://assets/gear/ui/button.tres" type="Theme" id=4]
[ext_resource path="res://fonts/monogram.tres" type="DynamicFont" id=5]

[sub_resource type="Theme" id=1]

[node name="problem_solver" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="dim" type="ColorRect" parent="control"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.607843 )

[node name="code_panel" type="Control" parent="control"]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="background" type="NinePatchRect" parent="control/code_panel"]
margin_left = -10.0
margin_top = 24.0
margin_right = 119.0
margin_bottom = 162.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
region_rect = Rect2( 2, 34, 44, 44 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="code_editor" type="TextEdit" parent="control/code_panel"]
margin_left = 16.0
margin_top = 48.0
margin_right = 248.0
margin_bottom = 172.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 5 )
highlight_current_line = true
show_line_numbers = true
draw_tabs = true

[node name="code_feedback" type="TextEdit" parent="control/code_panel"]
margin_left = 16.0
margin_top = 304.0
margin_right = 325.0
margin_bottom = 381.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 5 )
text = "error feedback"
readonly = true

[node name="run_button" type="Button" parent="control/code_panel"]
margin_left = 272.0
margin_top = 456.0
margin_right = 308.0
margin_bottom = 473.0
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 4 )
text = "RUN"

[node name="reset_button" type="Button" parent="control/code_panel"]
margin_left = 80.0
margin_top = 456.0
margin_right = 116.0
margin_bottom = 473.0
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 4 )
text = "RESET"

[node name="tutorial_panel" type="Control" parent="control"]
margin_right = 512.0
margin_bottom = 600.0

[node name="background" type="NinePatchRect" parent="control/tutorial_panel"]
margin_left = 16.0
margin_top = 24.0
margin_right = 136.0
margin_bottom = 162.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
region_rect = Rect2( 0, 96, 48, 32 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 5

[node name="tutorial" type="RichTextLabel" parent="control/tutorial_panel"]
margin_left = 56.0
margin_top = 64.0
margin_right = 189.0
margin_bottom = 221.0
rect_scale = Vector2( 3, 3 )
custom_fonts/normal_font = ExtResource( 5 )
text = "question here"

[node name="close_button" type="Button" parent="control"]
margin_left = 8.0
margin_top = 8.0
margin_right = 26.0
margin_bottom = 25.0
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "X"

[connection signal="pressed" from="control/code_panel/run_button" to="." method="_on_run_button_pressed"]
[connection signal="pressed" from="control/code_panel/reset_button" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="control/close_button" to="." method="_on_close_button_pressed"]
